<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AreaField</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="speed">Speed:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="widthplow">Width plow:</string>
    <string name="inputdataplow">Input width plow</string>
    <string name="areaplowed">Area plowed:</string>
    <string name="tost_width_plow">Input width plow in metr</string>
    <string name="tost_nameSeries">Input name</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="routing">Routing:</string>
     <string name="size_m">м</string>
    <string name="size_g">га</string>
    <string name="size_spedd">км/ч</string>
    <string name="nameSeries">Name of series</string>
    <string name="saveSeries">Save the series</string>
    
    
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="new_run">New Run</string>
    <string name="map">Map</string>
    <string name="run_start">Run Start</string>
    <string name="run_started_at_format">Run started at %s</string>
    <string name="run_finish">Run Finish</string>
    <string name="run_finished_at_format">Run finished at %s</string>

</resources>